# MTVP

./: .env  .gitignore  README.md  SETUP.py  images.py  main.py  mtv_docker_32_file  mtv_docker_64_file  mtvimages.py  mtvmovies.py  mtvserver.py  mtvserverasync.py  mtvserverutils.py  mtvtables.py  mtvtvshows.py  mtvvideos.py  tables.py  test_SETUP.py  test_mtvimages.py  test_mtvmovies.py  test_utils.py  tvshows.py  utils.py
env/: .env
go/: go.mod  go.sum  main.go  server.go
go/handlers/: mtvmedia_handlers.go  mtvmedia_handlers_test.go  mtvutils_handlers.go  mtvutils_handlers_test.go  search.go  search_test.go
go/integration/: integration_test.go
go/mpvipc/: mpvipc.go  mpvipc_test.go
go/mtvmedia/: mtvmedia.go  mtvmedia_test.go
go/server/: handlers.go  handlers_test.go  movhandlers.go  server.go  server_test.go  template_test.go  tvhandlers.go  updatehandlers.go  updatehandlers_test.go  wshandlers.go
go/setup/: env.go  env_test.go  images.go  images_test.go  media.go  media_test.go  populate.go  setup.go  tables.go  tables_test.go  tvshows.go  videos.go  videos_test.go
go/static/css/: mtv.css
go/static/javascript/: mtv.js
go/static/templates/: index.html
go/templates/: index.html  index2.html  radar.html
go/templates/mov/: movactionpage.html  movarnoldpage.html  movavatarpage.html  movbruceleepage.html  movbrucewillispage.html  movbuzzpage.html  movcartoonspage.html  movcharliebrownpage.html  (+53 more)
rust/: Cargo.toml  main.rs
tests/: test_main.py  test_mtvserverasync.py  test_mtvserverutils.py  test_mtvtables.py  test_mtvtvshows.py  test_mtvvideos.py
(+120 files in other folders)
